make nav sticky and fix layout background and spacing issues

--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -5,13 +5,13 @@
 
 /* TODO: fix flex settings so navbar doesn't get squished */
 .main {
-  flex: 10;
+  flex: 20;
   position: relative;
-  background-color: var(--background);
-  color: var(--on-background);
   height: 100%;
   width: 100%;
   padding: 5em 3em 3em 3em;
+  margin-left: 200px;
+  overflow: auto;
 }
 
 .mainPurple {
@@ -25,29 +25,23 @@
   background-color: var(--grey-80);
 }
 
-/* @media only screen and (max-width: 480px) {
+/* extra small, mobile */
+@media only screen and (max-width: 480px) {
   .main {
-    padding: 5em 3em 3em 3em;
+    margin-left: 0;
   }
-} */
+} 
 
-@media only screen and (min-width: 480px) {
+/* small, tablets */
+@media only screen and (max-width: 768px) {
   .main {
-    padding: 5em 3em 3em 3em;
-  }
-}
-
-/* Small Devices, Tablets */
-@media only screen and (min-width: 768px) {
-  .main {
-    padding: 5em 3em 3em 3em;
+    margin-left: 0;
   }
 }
 
-/* Medium Devices, Desktops */
-@media only screen and (min-width: 992px) {
-}
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width: 1200px) {
+/* medium, desktops */
+@media only screen and (max-width: 992px) {
+  .main {
+    margin-left: 0;
+  }
 }
